tests/gtests/negative/validation/04_empty_choices.gtest
#SET OUT=${WORK_DIR}/empty_choices.json
#RUN greentic-component test --wasm ${REPO_ROOT}/target/wasm32-wasip2/release/component_adaptive_card.wasm --manifest ${REPO_ROOT}/component.manifest.json --op card --input-json '{"validation_mode":"error","card_spec":{"inline_json":{"type":"AdaptiveCard","version":"1.3","body":[{"type":"Input.ChoiceSet","id":"choice","choices":[]}]} }}'
#EXPECT_EXIT 0
#CAPTURE_JSON > ${OUT}
#EXPECT_JSONPATH ${OUT} error.code equals AC_CARD_VALIDATION_FAILED
#EXPECT_JSONPATH ${OUT} error.details.validation_issues[*].code contains empty-choices
#SAVE_ARTIFACT ${OUT}
